# sqlalchemy-snippets

./: .gitignore  pyproject.toml
create_table_orm/: __init__.py  main.py
