[tool.poetry]
name = "sqlalchemy-snippets"
version = "0.1.0"
description = "my personal short snippets on SQLAlchemy"
authors = ["Yoshi Yamaguchi"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.20"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"
isort = "^5.9.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
